JsonConfig/cmDevBoxAutomation/template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "virtualMachines_cmDevBox_adminPassword": {
            "defaultValue": null,
            "type": "SecureString"
        },
        "virtualMachines_cmDevBox_name": {
            "defaultValue": "cmDevBox",
            "type": "String"
        },
        "networkInterfaces_cmdevbox693_name": {
            "defaultValue": "cmdevbox693",
            "type": "String"
        },
        "networkSecurityGroups_cmDevBox_nsg_name": {
            "defaultValue": "cmDevBox-nsg",
            "type": "String"
        },
        "publicIPAddresses_cmDevBox_ip_name": {
            "defaultValue": "cmDevBox-ip",
            "type": "String"
        },
        "virtualNetworks_cmDevRG_vnet_name": {
            "defaultValue": "cmDevRG-vnet",
            "type": "String"
        },
        "storageAccounts_cmdevrgdiag197_name": {
            "defaultValue": "cmdevrgdiag197",
            "type": "String"
        },
        "storageAccounts_cmdevrgdisks601_name": {
            "defaultValue": "cmdevrgdisks601",
            "type": "String"
        }
    },
    "variables": {},
    "resources": [
        {
            "comments": "Generalized from resource: '/subscriptions/7261fdd2-889c-491b-8657-1ff32e1cac4b/resourceGroups/cmDevRG/providers/Microsoft.Compute/virtualMachines/cmDevBox'.",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('virtualMachines_cmDevBox_name')]",
            "apiVersion": "2015-06-15",
            "location": "westus2",
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_D2_v2"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftVisualStudio",
                        "offer": "VisualStudio",
                        "sku": "VS-2015-Ent-VSU3-AzureSDK-29-Win10-N",
                        "version": "latest"
                    },
                    "osDisk": {
                        "name": "[parameters('virtualMachines_cmDevBox_name')]",
                        "createOption": "FromImage",
                        "vhd": {
                            "uri": "[concat('https', '://', parameters('storageAccounts_cmdevrgdisks601_name'), '.blob.core.windows.net', concat('/vhds/', parameters('virtualMachines_cmDevBox_name'),'20170103175417.vhd'))]"
                        },
                        "caching": "ReadWrite"
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_cmDevBox_name')]",
                    "adminUsername": "cmackay",
                    "windowsConfiguration": {
                        "provisionVMAgent": true,
                        "enableAutomaticUpdates": true
                    },
                    "secrets": [],
                    "adminPassword": "[parameters('virtualMachines_cmDevBox_adminPassword')]"
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_cmdevbox693_name'))]"
                        }
                    ]
                }
            },
            "resources": [],
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccounts_cmdevrgdisks601_name'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_cmdevbox693_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/7261fdd2-889c-491b-8657-1ff32e1cac4b/resourceGroups/cmDevRG/providers/Microsoft.Network/networkInterfaces/cmdevbox693'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_cmdevbox693_name')]",
            "apiVersion": "2016-03-30",
            "location": "westus2",
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAddress": "10.0.0.4",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_cmDevBox_ip_name'))]"
                            },
                            "subnet": {
                                "id": "[concat(resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_cmDevRG_vnet_name')), '/subnets/default')]"
                            }
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": []
                },
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_cmDevBox_nsg_name'))]"
                }
            },
            "resources": [],
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_cmDevBox_ip_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_cmDevRG_vnet_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_cmDevBox_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/7261fdd2-889c-491b-8657-1ff32e1cac4b/resourceGroups/cmDevRG/providers/Microsoft.Network/networkSecurityGroups/cmDevBox-nsg'.",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_cmDevBox_nsg_name')]",
            "apiVersion": "2016-03-30",
            "location": "westus2",
            "properties": {
                "securityRules": [
                    {
                        "name": "default-allow-rdp",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1000,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "VSApp",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "2289",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1010,
                            "direction": "Inbound"
                        }
                    }
                ]
            },
            "resources": [],
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/7261fdd2-889c-491b-8657-1ff32e1cac4b/resourceGroups/cmDevRG/providers/Microsoft.Network/publicIPAddresses/cmDevBox-ip'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[parameters('publicIPAddresses_cmDevBox_ip_name')]",
            "apiVersion": "2016-03-30",
            "location": "westus2",
            "properties": {
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4
            },
            "resources": [],
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/7261fdd2-889c-491b-8657-1ff32e1cac4b/resourceGroups/cmDevRG/providers/Microsoft.Network/virtualNetworks/cmDevRG-vnet'.",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('virtualNetworks_cmDevRG_vnet_name')]",
            "apiVersion": "2016-03-30",
            "location": "westus2",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "10.0.0.0/24"
                    ]
                },
                "subnets": [
                    {
                        "name": "default",
                        "properties": {
                            "addressPrefix": "10.0.0.0/24"
                        }
                    }
                ]
            },
            "resources": [],
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/7261fdd2-889c-491b-8657-1ff32e1cac4b/resourceGroups/cmdevrg/providers/Microsoft.Storage/storageAccounts/cmdevrgdiag197'.",
            "type": "Microsoft.Storage/storageAccounts",
            "sku": {
                "name": "Standard_LRS",
                "tier": "Standard"
            },
            "kind": "Storage",
            "name": "[parameters('storageAccounts_cmdevrgdiag197_name')]",
            "apiVersion": "2016-01-01",
            "location": "westus2",
            "tags": {},
            "properties": {},
            "resources": [],
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/7261fdd2-889c-491b-8657-1ff32e1cac4b/resourceGroups/cmdevrg/providers/Microsoft.Storage/storageAccounts/cmdevrgdisks601'.",
            "type": "Microsoft.Storage/storageAccounts",
            "sku": {
                "name": "Standard_LRS",
                "tier": "Standard"
            },
            "kind": "Storage",
            "name": "[parameters('storageAccounts_cmdevrgdisks601_name')]",
            "apiVersion": "2016-01-01",
            "location": "westus2",
            "tags": {},
            "properties": {},
            "resources": [],
            "dependsOn": []
        }
    ]
}
